@@ -13,6 +13,8 @@ from one strand.
 * Added new utility brg2fasta.
 * Added ability in bmatches to use masks that are prefixes of the mask (-k).
 * Now can output a very rudimentary mapping quality in bpostprocess.
+* Added a scripts folder to convert raw base/color calls to BFAST fastq
+format.
 
 Version 0.4.3
 * Added an option to bpostprocess where all "best scoring" alignments
